--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@
   --hover-color: #64ffda;
   --bg-button: rgba(100, 255, 218, 0.1);
   
+  
 
 
   /*========== Font and typography ==========*/
@@ -115,8 +116,8 @@ h3::selection,
 h4::selection,
 h5::selection,
 h6::selection {
-  background-color: var(--title-color);
-  color: var(--container-color);
+  background-color: var(--bg-button);
+  color: var(--title-color);
 }
 
 ul {
@@ -147,7 +148,7 @@ img {
 .section__title {
   font-size: var(--h1-font-size);
   color: var(--title-color);
-  margin-bottom: 1.5rem;
+  margin-bottom: 4rem;
 }
 
 .section__subtitle {
@@ -162,7 +163,8 @@ img {
   margin-bottom: .5rem;
   font-weight: var(--font-normal);
   color: var(--hover-color);
-  letter-spacing: .1rem;
+  letter-spacing: .05rem;
+  word-spacing: .2rem;
   justify-content: center;
 }
 
@@ -188,11 +190,11 @@ img {
   display: inline-block;
   background-color: transparent;
   color: var(--hover-color);
-  padding: 1.25rem 2rem;
+  padding: 0.5rem 1rem;
   border-radius: .35rem;
   border: 1px solid var(--hover-color);
   font-weight: var(--font-medium);
-  transition: .3s;
+  transition: .4s;
 }
 
 .button:hover {
@@ -209,6 +211,15 @@ img {
   align-items: center;
 }
 
+::-webkit-scrollbar-thumb {
+  background-color: var(--title-color-dark);
+  border: 2px solid var(--body-color);
+  border-radius: .5rem;
+}
+::-webkit-scrollbar {
+  width: .6rem;
+}
+
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
@@ -218,7 +229,7 @@ img {
   }
 
   .button {
-    padding: 1rem 1.75rem;
+    padding: .5rem .75rem;
   }
 
   .button__icon {
