--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -17,12 +17,14 @@
 }
 
 .home__social-icon {
-    font-size: 1.25rem;
+    font-size: 1.4rem;
     color: var(--title-color);
+    transition: all .3s;
 }
 
 .home__social-icon:hover {
     color: var(--hover-color);
+    transform: translateY(-.2rem) !important;
 }
 
 .home__title {
@@ -67,7 +69,7 @@
     background-size: cover;
     width: 300px;
     height: 300px;
-    box-shadow: inset 0 0 0 9px rgba(82, 81, 81, 0.3);
+    box-shadow: inset 0 0 0 9px var(--bg-button);
     order: 1;
     justify-self: center;
     animation: profile__animate 8s ease-in-out infinite 1s;
