--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -16,6 +16,7 @@
     margin-bottom: var(--mb-2);
 }
 
+
 .about__box {
     background-color: var(--container-color) ;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -27,22 +28,25 @@
 
 .about__icon {
     font-size: 1.5rem;
-    color: var(--title-color);
+    color: var(--hover-color);
     margin-bottom: var(--mb-0-5);
 }
 
 .about__title {
-    font-size: var(--small-font-size);
+    font-size: var(--normal-font-size);
     font-weight: var(--font-normal);
 }
 
 .about__subtitle {
-    font-size: var(--tiny-font-size);
+    font-size: var(--smaller-font-size);
 }
 
 .about__description {
     padding: 0 4rem 0 0;
     margin-bottom: var(--mb-2-5);
+    letter-spacing: 0.01rem;
+    word-spacing: 0.03rem;
+    font-size: var(--normal-font-size);
 }
 
 
