--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -40,7 +40,7 @@
     margin-bottom: var(--mb-0-25);
 }
 .contact__button {
-    color: var(--text-color);
+    color: var(--hover-color);
     font-size: var(--small-font-size);
     display: inline-flex;
     align-items: center;
@@ -71,13 +71,18 @@
     left: 0;
     width: 100%;
     height: 90%;
-    border: 2px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid var(--title-color-dark);
     background: none;
-    color: var(--text-color);
+    color: var(--title-color);
     outline: none;
     border-radius: 0.25rem;
-    padding: 1.5rem;
+    padding: 1.5rem .5rem;
     z-index: 1;
+}
+.contact__form-input::placeholder {
+    color: var(--title-color-dark);
+    opacity: 0.6;
+    font-size: var(--smaller-font-size);
 }
 .contact__form-tag {
     position: absolute;
