--- a/src/components/qualifications/qualifications.css
+++ b/src/components/qualifications/qualifications.css
@@ -1,44 +1,67 @@
+.qualification {
+    min-height: 100vh;
+}
+
 .qualification__container {
     max-width: 768px;
+    display: flex;
+    position: relative;
 }
 
 .qualification__tabs {
     display: flex;
-    justify-content: center;
-    margin-bottom: var(--h3-font-size);
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: auto;
+    
 }
 .qualification__button {
-    font-size: var(--h3-font-size);
-    font-weight: var(--font-medium);
+    font-size: var(--small-font-size);
+    font-weight: var(--font-normal);
     color: var(--title-color-dark);
-    margin: 0 var(--mb-1);
+    padding: var(--mb-1) var(--mb-0-5);
     cursor: pointer;
     transition: all .3s;
+    min-width: 100%;
+    border-left: 1px solid var(--text-color);
+    letter-spacing: 0.05rem;
+    
+    
+}
+.qualification__button:hover {
+    background-color: var(--container-color);
+    color: var(--hover-color);
 }
 
 .qualification__icon {
-    font-size: 1.8rem;
-    margin-right: var(--mb-0-25);
+    font-size: .5rem;
+    margin-right: var(--mb-0-75);
+    color: var(--hover-color);
 }
 .qualification__active {
-    color: var(--title-color);
+    color: var(--hover-color);
+    background-color: var(--container-color);
+    border-left: 1px solid var(--hover-color);
+    
 }
 .qualification__sections {
-    display: grid;
-    grid-template-columns: 0.5fr;
-    justify-content: center;
+    
 
 }
 .qualification__content {
     display: none;
+
 }
 .qualification__content-active {
     display: block;
 }
 .qualification__data {
-    display: grid;
-    grid-template-columns: 1fr max-content 1fr;
-    column-gap: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0 var(--mb-1-5);
+    gap: .2rem;
+    max-width: 450px;
 }
 
 .qualification__title {
@@ -47,19 +70,25 @@
 }
 
 .qualification__subtitle {
-    display: inline-block;
+    
     font-size: var(--small-font-size);
-    margin-bottom: var(--mb-1);
+    
+}
+.qualification__details > p:not(last-child) {
+    margin-bottom: 1rem;
 }
 .qualification__calender {
-    font-size: var(--small-font-size);
+    font-size: var(--smaller-font-size);
+    margin-bottom: var(--mb-1-5);
+    display: inline-block;
 }
 .qualification__rounder {
     display: inline-block;
     width: 13px;
     height: 13px;
-    background-color: var(--text-color);
+    background-color: var(--hover-color);
     border-radius: 50%;
+    z-index: 100;
 }
 .qualification__line {
     display: block;
@@ -88,12 +117,24 @@
 }
 
 @media screen and (max-width: 576px) {
-    .qualification__sections {
+    /* .qualification__sections {
         grid-template-columns: initial;
-    }
+    } */
     .qualification__button {
-        margin: 0 var(--mb-0-75);
+        /* margin: 0 var(--mb-0-75); */
+        display: inline-block;
     }
+    .qualification__tabs {
+        flex-direction: row;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        /* height: auto; */
+        /* border: none; */
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+    }
+
+    
 }
 
 /* For small devices */
