--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -12,10 +12,10 @@
 }
 
 .skills__title {
-    font-size: var(--normal-font-size);
+    font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
     text-align: center;
-    margin-bottom: var(--mb-1-5);
+    margin-bottom: var(--mb-2-5);
 }
 
 .skills__box {
@@ -27,28 +27,29 @@
 .skills__group {
     display: grid;
     align-items: flex-start;
-    row-gap: 1rem;
+    row-gap: 2rem;
+    justify-content: center;
 }
 
 .skills__data {
     display: flex;
     column-gap: 0.5rem;
+    align-items: center;
 }
 
-.skills .bx-badge-check {
-    font-size: 1rem;
-    color: var(--title-color);
+.skills i {
+    font-size: 1.5rem;
+    color: var(--hover-color);
 }
 
 .skills__name {
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
-    line-height: 18px;
+    line-height: 1.1rem;
+    color: var(--title-color-dark);
 }
 
-.skills__level {
-    font-size: var(--tiny-font-size);
-}
+
 
 @media screen and (max-width: 992px) {
     .skills__container {
