--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,7 @@
 :root {
   --header-height: 3rem;
 
-  /*========== Colors ==========*/
-  /*Color mode HSL(hue, saturation, lightness)*/
 
-  /* --hue: 0;
-  --sat: 0%;
-  --title-color: hsl(var(--hue), var(--sat), 20%);
-  --title-color-dark: hsl(var(--hue), var(--sat), 0%);
-  --text-color: hsl(var(--hue), var(--sat), 46%);
-  --body-color: #E1F1EC; */
-  /* hsl(var(--hue), var(--sat), 98%); */
-  /* --container-color: #D9E8E3; */
   --title-color: #ccd6f6;
   --title-color-dark: #8892b0;
   --text-color: #8892b0;
@@ -45,7 +35,7 @@
   --font-medium: 500;
   --font-semi-bold: 600;
 
-  /*========== Margenes Bottom ==========*/
+  /*========== Margins ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
   --mb-0-25: 0.25rem;
   --mb-0-5: 0.5rem;
@@ -98,6 +88,7 @@ textarea {
 body {
   background-color: var(--body-color);
   color: var(--text-color);
+  max-width: 100vw;
 }
 
 h1,
@@ -107,15 +98,7 @@ h3 {
   font-weight: var(--font-semi-bold);
 }
 
-p::selection, 
-span::selection,
-a::selection,
-h1::selection,
-h2::selection,
-h3::selection,
-h4::selection,
-h5::selection,
-h6::selection {
+::selection {
   background-color: var(--bg-button);
   color: var(--title-color);
 }
@@ -148,7 +131,7 @@ img {
 .section__title {
   font-size: var(--h1-font-size);
   color: var(--title-color);
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 
 .section__subtitle {
@@ -209,15 +192,20 @@ img {
 .button--flex {
   display: inline-flex;
   align-items: center;
+  width: max-content;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--title-color-dark);
+  background-color: var(--container-color);
   border: 2px solid var(--body-color);
   border-radius: .5rem;
 }
 ::-webkit-scrollbar {
-  width: .6rem;
+  width: .5rem;
+  height: 1rem;
+}
+::-webkit-scrollbar-track {
+  background-color: var(--body-color);
 }
 
 /*=============== BREAKPOINTS ===============*/
@@ -249,7 +237,8 @@ img {
   }
 
   .section__subtitle {
-    margin-bottom: var(--mb-3);
+    margin: 0 auto var(--mb-3);
+    
   }
 }
 
@@ -266,27 +255,6 @@ img {
     margin-left: var(--mb-1);
     margin-right: var(--mb-1);
   }
-}
-
-
-
-
-
-/*=============== BREAKPOINTS ===============*/
-
-/* @media screen and (max-width: 992px) {
  
 }
 
-
-@media screen and (max-width: 768px) {
- 
-}
-
-@media screen and (max-width: 576px) {
-}
-
-
-@media screen and (max-width: 350px) {
-
-} */
