--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -9,6 +9,11 @@
     align-items: center;
 }
 
+.home__data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .home__social {
     display: grid;
     grid-template-columns: max-content;
@@ -30,12 +35,6 @@
 .home__title {
     font-size: var(--big-font-size);
     margin-bottom: var(--mb-0-25);
-}
-
-.home__hand {
-    width: 38px;
-    height: 38px;
-    margin-left: 0.4rem;
 }
 
 .home__subtitle {
@@ -162,7 +161,7 @@
         justify-self: initial;
     }
     .home__data {
-        grid-column: 1/3;
+        grid-column: 2/3;
     }
     .home__img {
         box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
