--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,6 +14,10 @@
     align-items: center;
     column-gap: 1rem;
 }
+.nav__logo {
+    height: 20px;
+    width: 50px;
+}
 
 .nav__logo,
 .nav__toggle {
