--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -9,17 +9,18 @@
     margin-bottom: var(--mb-3);
 }
 .testimonial__img {
-    width: 60px;
+    width: 80px;
     border-radius: 3rem;
     margin-bottom: var(--mb-1);
 }
 .testimonial__name {
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
-    margin-bottom: var(--mb-0-25);
+   
 }
 .testimonial__description {
     font-size: var(--small-font-size);
+    margin-top: var(--mb-1);
 }
 /* Swiper */
 .swiper-pagination-bullet {
@@ -27,7 +28,14 @@
 }
 .swiper-pagination-bullet-active {
     background-color: var(--title-color) !important;
-
+}
+.testimonial__title {
+    font-size: var(--smaller-font-size);
+    font-weight: var(--font-normal);
+    color: var(--title-color-dark);
+    margin-bottom: var(--mb-2);
+    
+    
 }
 
 /* Breakpoint */
@@ -47,6 +55,9 @@
 }
 
 @media screen and (max-width: 576px) {
+    .testimonial__img {
+        width: 50px;
+    }
 }
 
 /* For small devices */
