--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,6 @@ textarea {
 body {
   background-color: var(--body-color);
   color: var(--text-color);
-  max-width: 100vw;
 }
 
 h1,
@@ -196,7 +195,7 @@ img {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--container-color);
+  background-color: var(--title-color-dark);
   border: 2px solid var(--body-color);
   border-radius: .5rem;
 }
