--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,6 +14,7 @@
     align-items: center;
     column-gap: 1rem;
 }
+
 .nav__logo {
     height: 20px;
     width: 50px;
@@ -64,16 +65,26 @@
 }
 
 .scroll-header {
-    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 -1px 4px rgba(100, 255, 218, 0.5);
 }
 
+.tony__svg {
+    animation: scroll 2s ease infinite;
+}
 
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+    30% {
+        transform: translateX(3.75rem);
+    }
+}
 
 @media screen and (max-width: 768px) {
     .header {
         top: initial;
         bottom: 0;
-        /* max-width: 100vw !important; */
     }
     .nav {
         height: var(--header-height);
