--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -69,7 +69,9 @@
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
- 
+ .footer__copy {
+    margin-top: -2rem;
+ }
 }
 
 @media screen and (max-width: 576px) {
