--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -56,7 +56,7 @@
     box-shadow: 0 -1px 4px rgba(100, 255, 218, 0.5);
 }
 
-.tony__svg {
+/* .tony__svg {
     animation: scroll 2s ease infinite;
 }
 
@@ -67,7 +67,7 @@
     50% {
         transform: translateX(3.75rem);
     }
-}
+} */
 
 @media screen and (max-width: 768px) {
     .header {
