--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,25 +1,9 @@
 .footer {
     background-color: var(--body-color);
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-top: 1px solid var(--bg-button);
+    /* rgba(0, 0, 0, 0.1); */
 }
 
-.footer__title,
-.footer__link {
-    color: var(--title-color);
-}
-.footer__title {
-    text-align: center;
-    margin-bottom: var(--mb-2);
-}
-.footer__link:hover {
-    color: var(--title-color-dark);
-}
-.footer__list {
-    display: flex;
-    justify-content: center;
-    column-gap: 1.5rem;
-    margin-bottom: var(--mb-2);
-}
 .footer__social {
     display: flex;
     justify-content: center;
