--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -4,6 +4,7 @@
     column-gap: 6rem;
     padding-bottom: 3rem;
 }
+
 .contact__title {
     text-align: center;
     font-size: var(--h3-font-size);
@@ -16,6 +17,7 @@
     row-gap: 1rem;
     grid-template-columns: 300px;
 }
+
 .contact__card {
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -23,22 +25,27 @@
     border-radius: 0.25rem;
     text-align: center;
 }
+
 .contact__card-icon {
     font-size: 2rem;
     color: var(--title-color);
     margin-bottom: var(--mb-0-25);
 }
+
 .contact__card-title,
 .contact__card-data {
     font-size: var(--small-font-size);
 }
+
 .contact__card-title {
     font-weight: var(--font-medium);
 }
+
 .contact__card-data {
     display: block;
     margin-bottom: var(--mb-0-25);
 }
+
 .contact__button {
     color: var(--hover-color);
     font-size: var(--small-font-size);
@@ -47,6 +54,7 @@
     justify-content: center;
     column-gap: 0.25rem;
 }
+
 .contact__button-icon {
     font-size: 1rem;
     transition: .3s;
@@ -65,13 +73,14 @@
     margin-bottom: var(--mb-2);
     height: 4rem;
 }
+
 .contact__form-input {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 90%;
-    border: 1px solid var(--title-color-dark);
+    border: 1px groove var(--title-color-dark);
     background: none;
     color: var(--title-color);
     outline: none;
@@ -79,11 +88,13 @@
     padding: 1.5rem .5rem;
     z-index: 1;
 }
+
 .contact__form-input::placeholder {
     color: var(--title-color-dark);
-    opacity: 0.6;
+    opacity: 0.5;
     font-size: var(--smaller-font-size);
 }
+
 .contact__form-tag {
     position: absolute;
     top: -0.75rem;
@@ -91,11 +102,13 @@
     font-size: var(--smaller-font-size);
     padding: 0.25rem;
     background-color: var(--body-color);
-    z-index: 10;
+    z-index: 2;
 }
+
 .contact__form-area {
     height: 11rem;
 }
+
 .contact__form-area textarea {
     resize: none;
 }
