--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -66,6 +66,7 @@
     max-width: 90%;
     font-size: var(--small-font-size);
     font-weight: var(--font-normal);
+    height: max-content;
 }
 .work__flex {
     display: flex;
